# kratos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_macos.sh  build_windows.bat
engine/: CMakeLists.txt
engine/config/development/: KratosEditor.ini
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h  editor_global_context.h  editor_ui.h
engine/source/editor/source/: editor.cpp  editor_global_context.cpp  editor_ui.cpp  main.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: macro.h  platform.h
engine/source/runtime/core/ksstl/: KSContainer.h  KSString.cpp  KSString.h
engine/source/runtime/core/log/: logSystem.cpp  logSystem.h  log_system.cpp
engine/source/runtime/core/math/: Vector3.cpp  Vector3.h  math.cpp  math.h  math_macro.h  matrix3X3.cpp  matrix3X3.h  quaternion.cpp  quaternion.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector3Distance.cpp
engine/source/runtime/core/memory/: memory_manager.cpp  memory_manager.h  system.h
engine/source/runtime/core/system/: synchronize.cpp  synchronize.h  system.h
engine/source/runtime/function/: global_context.cpp
engine/source/runtime/function/application/: application.cpp  application.h  window_system.cpp  window_system.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/platform/file_service/: file_service.cpp  file_service.h
engine/source/runtime/platform/path/: path.cpp  path.h
